# wifi6-http-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  VERSION  pSSSm_static.yml  pm_static.yml  prj.conf  prj_debug.conf  prj_release.conf  sysbuild.conf
application/: CMakeLists.txt  main.c  my_function.c  my_function.h  network_http.c  network_http.h  network_manager.c  network_manager.h  network_mqtt.c  network_mqtt.h  network_perf.c  network_perf.h  network_socket.c  network_socket.h
application/pages/: index.c  pages.h
boards/: nrf7002dk_nrf5340_cpuapp_ns.conf
hal/: CMakeLists.txt
hal/drivers/: CMakeLists.txt
hal/ext_drivers/: CMakeLists.txt
hal/ext_drivers/custom_driver_module/: CMakeLists.txt
hal/ext_drivers/custom_driver_module/drivers/: CMakeLists.txt  Kconfig
hal/ext_drivers/custom_driver_module/drivers/blink/: CMakeLists.txt  Kconfig  gpio_led.c
hal/ext_drivers/custom_driver_module/drivers/sensor/custom_bme280/: CMakeLists.txt  custom_bme280.c
hal/ext_drivers/custom_driver_module/include/: blink.h
hal/startup/: CMakeLists.txt  toolchain_m4.cmake
middlewares/: CMakeLists.txt
middlewares/libs/: CMakeLists.txt
middlewares/utils/: CMakeLists.txt
sysbuild/: mcuboot.conf  mcuboot.overlay
